--- a/ms.tex
+++ b/ms.tex
@@ -308,7 +308,7 @@ In this Section the results of the three experimental setups are demonstrated, a
 \subsection{Overall}
 In Table.~\ref{table:metrics} the resulted metrics of all experiments are presented.
 The best combination of architecture-encoder for each combination of encoder weight initialization, experimental setup and metric are showin in bold.
-The mean Dice results for each experiment are $\DTLfetch{keys-values}{key}{lung-segmentation-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lung-segmentation-imagenet-std}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-a-imagenet-std}{value}\%$, for `lesion segmentation A' and $\DTLfetch{keys-values}{key}{lesion-segmentation-b-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-b-imagenet-std}{value}\%$, for `lesion segmentation B'.
+The mean Dice results for each experiment are $\DTLfetch{keys-values}{key}{lung-segmentation-imagenet-mean}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-imagenet-mean}{value}\%$, for `lesion segmentation A' and $\DTLfetch{keys-values}{key}{lesion-segmentation-b-imagenet-mean}{value}\%$, for `lesion segmentation B'.
 The best performing models w.r.t.\ Dice for each experiment were the \DTLfetch{keys-values}{key}{lung-segmentation-architecture-imagenet-index-max}{value}-\DTLfetch{keys-values}{key}{lung-segmentation-encoder-imagenet-index-max}{value} ($\DTLfetch{keys-values}{key}{lung-segmentation-imagenet-max}{value}\%$) for lung segmentation, \DTLfetch{keys-values}{key}{lesion-segmentation-a-architecture-imagenet-index-max}{value}-\DTLfetch{keys-values}{key}{lesion-segmentation-a-encoder-imagenet-index-max}{value} ($\DTLfetch{keys-values}{key}{lesion-segmentation-a-imagenet-max}{value}\%$) for lesion segmentation A and \DTLfetch{keys-values}{key}{lesion-segmentation-b-architecture-imagenet-index-max}{value}-\DTLfetch{keys-values}{key}{lesion-segmentation-b-encoder-imagenet-index-max}{value} ($\DTLfetch{keys-values}{key}{lesion-segmentation-b-imagenet-max}{value}\%$) for lesion segmentation B.
 In Fig.~\ref{fig:predictedmasks} the predicted masks for $24$ out of the $600$ models are depicted, demonstrating the difference in segmentation quality between the best (\DTLfetch{keys-values}{key}{encoder-best}{value}) and the worst (\DTLfetch{keys-values}{key}{encoder-worst}{value}) performing encoder of the models for each architecture, with randomly initialized weights.
 In Fig.~\ref{fig:dicevsnumparameters} the Dice vs.\ the number of parameters is plotted, demonstrating that there is positive correlation, suggesting that segmentation generally improves when using higher number of parameters.
@@ -412,10 +412,10 @@ Regarding time performance for training and inference, the fastest architecture 
 	\caption{Boxplots of Dice for the three experiments and for each architecture in (a), (b) and (c) and weight initialization for all experiments in (d).}\label{fig:box}
 \end{figure}
 
-The mean Dice results for Unet are $\DTLfetch{keys-values}{key}{lung-segmentation-Unet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lung-segmentation-Unet-imagenet-std}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-Unet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-a-Unet-imagenet-std}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-Unet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-b-Unet-imagenet-std}{value}\%$ for `lesion segmentation B'.
-The mean Dice results for Linknet are $\DTLfetch{keys-values}{key}{lung-segmentation-Linknet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lung-segmentation-Linknet-imagenet-std}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-Linknet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-a-Linknet-imagenet-std}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-Linknet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-b-Linknet-imagenet-std}{value}\%$ for `lesion segmentation B'.
-The mean Dice results for FPN are $\DTLfetch{keys-values}{key}{lung-segmentation-FPN-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lung-segmentation-FPN-imagenet-std}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-FPN-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-a-FPN-imagenet-std}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-FPN-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-b-FPN-imagenet-std}{value}\%$ for `lesion segmentation B'.
-The mean Dice results for PSPNet are $\DTLfetch{keys-values}{key}{lung-segmentation-PSPNet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lung-segmentation-PSPNet-imagenet-std}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-PSPNet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-a-PSPNet-imagenet-std}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-PSPNet-imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{lesion-segmentation-b-PSPNet-imagenet-std}{value}\%$ for `lesion segmentation B'.
+The mean Dice results for Unet are $\DTLfetch{keys-values}{key}{lung-segmentation-Unet-imagenet-mean}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-Unet-imagenet-mean}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-Unet-imagenet-mean}{value}\%$ for `lesion segmentation B'.
+The mean Dice results for Linknet are $\DTLfetch{keys-values}{key}{lung-segmentation-Linknet-imagenet-mean}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-Linknet-imagenet-mean}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-Linknet-imagenet-mean}{value}\%$ for `lesion segmentation B'.
+The mean Dice results for FPN are $\DTLfetch{keys-values}{key}{lung-segmentation-FPN-imagenet-mean}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-FPN-imagenet-mean}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-FPN-imagenet-mean}{value}\%$ for `lesion segmentation B'.
+The mean Dice results for PSPNet are $\DTLfetch{keys-values}{key}{lung-segmentation-PSPNet-imagenet-mean}{value}\%$ for lung segmentation, $\DTLfetch{keys-values}{key}{lesion-segmentation-a-PSPNet-imagenet-mean}{value}\%$ for `lesion segmentation A', $\DTLfetch{keys-values}{key}{lesion-segmentation-b-PSPNet-imagenet-mean}{value}\%$ for `lesion segmentation B'.
 
 In Fig.~\ref{fig:volumes} the predictions as a volume for the three experiments, for the resnet18 encoder are visualized, demonstrating good match with the original masks.
 
@@ -448,7 +448,7 @@ We observe convergence between the losses, which is an indication that when trai
 
 \subsection{Random initialization vs.\ pretrained on ImageNet}
 In Fig.~\ref{fig:weights} the weights are depicted, in which we observe that with random initialization the weights depict high and low frequency textures after training.
-The Dice for using random initialization is $\DTLfetch{keys-values}{key}{None-mean}{value}\%\pm\DTLfetch{keys-values}{key}{None-std}{value}\%$ and for ImageNet initialization is $\DTLfetch{keys-values}{key}{imagenet-mean}{value}\%\pm\DTLfetch{keys-values}{key}{imagenet-std}{value}\%$.
+The Dice for using random initialization is $\DTLfetch{keys-values}{key}{None-mean}{value}\%$ and for ImageNet initialization is $\DTLfetch{keys-values}{key}{imagenet-mean}{value}\%$.
 
 \begin{figure}[!t]
 	\centering
