--- a/README
+++ b/README
@@ -3,12 +3,12 @@ https://arxiv.org/abs/2009.06412
 https://pbizopoulos.github.io/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 
 # Requirements
-POSIX shell & utilities
+POSIX Utilities
 Git
 Docker (>= 19.03 for NVIDIA Container Toolkit)
 NVIDIA Container Toolkit (Optional)
 
-# Check code and build
+# Check and build code
 git clone https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
 cd comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 cd docs/ && make check all && cd ..
