convert to onnx

--- a/latex/ms.bib
+++ b/latex/ms.bib
@@ -143,17 +143,28 @@ Jian Sun},
  year = {2016}
 }
 
-@article{he2020benchmarking,
- author = {He, Xin and Wang, Shihao and Chu, Xiaowen and Shi, Shaohuai and Tang, Jiangping and Liu, Xin and Yan, Chenggang and Zhang, Jiyong and Ding, Guiguang},
- doi = {10.1609/aaai.v35i6.16614},
- issn = {2374-3468, 2159-5399},
- journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
- number = {6},
+@inproceedings{he2020benchmarking,
+ author = {Xin He and
+Shihao Wang and
+Xiaowen Chu and
+Shaohuai Shi and
+Jiangping Tang and
+Xin Liu and
+Chenggang Yan and
+Jiyong Zhang and
+Guiguang Ding},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/aaai/HeWCST0YZD21.bib},
+ booktitle = {Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
+2021, Thirty-Third Conference on Innovative Applications of Artificial
+Intelligence, {IAAI} 2021, The Eleventh Symposium on Educational Advances
+in Artificial Intelligence, {EAAI} 2021, Virtual Event, February 2-9,
+2021},
  pages = {4821--4829},
- publisher = {Association for the Advancement of Artificial Intelligence (AAAI)},
- source = {Crossref},
- title = {Automated Model Design and Benchmarking of Deep Learning Models for \{COVID\}-19 Detection with Chest {CT} Scans},
- volume = {35},
+ publisher = {{AAAI} Press},
+ timestamp = {Thu, 29 Sep 2022 01:00:00 +0200},
+ title = {Automated Model Design and Benchmarking of Deep Learning Models for
+{COVID-19} Detection with Chest {CT} Scans},
  year = {2021}
 }
 
