--- a/README
+++ b/README
@@ -1,23 +1,24 @@
 # Comprehensive Comparison of Deep Learning Models for Lung and COVID-19 Lesion Segmentation in CT
-https://arxiv.org/abs/2009.06412
-https://pbizopoulos.github.io/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
+# https://arxiv.org/abs/2009.06412
+# https://pbizopoulos.github.io/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 
 # Requirements
-POSIX Shell & Utilities
-Git
-Docker
-NVIDIA Container Toolkit (Optional)
+# POSIX Shell & Utilities
+# Git
+# Docker
+# NVIDIA Container Toolkit (Optional)
 
 # Download
-git clone https://github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct $HOME/github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
-cd $HOME/github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
+git clone git@github.com:pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct $HOME/github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct
 
 # Development
+cd $HOME/github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 cd docs/ && make clean check all && cd ..
 cd latex/python/ && make clean check all && cd ../..
 cd latex/ && make clean check all && cd ..
 
 # Staging
+cd $HOME/github.com/pbizopoulos/comprehensive-comparison-of-deep-learning-models-for-lung-and-covid-19-lesion-segmentation-in-ct/
 cd latex/python/ && make STAGING=1 && cd .. && make && cd ..
 cd docs/ && make STAGING=1
 
